--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 
 <body>
   <nav>
-    <a href="{{ '/' | append: 'en/' }}">English</a>
-    <a href="{{ '/' | append: 'zh/' }}">中文</a>
+    <a href="{{ '/' | append: '_i18n/en/' }}">English</a>
+    <a href="{{ '/' | append: '_i18n/zh/' }}">中文</a>
   </nav>
 
   {% if site.data.settings.google-analytics %}
