--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,77 +1,62 @@
-<!DOCTYPE html>
-<html>
-  <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title>Flex - {{ page.title }}</title>
-      <meta name="viewport" content="width=device-width">
+<!doctype html>
 
-      <!-- syntax highlighting CSS -->
-      <link rel="stylesheet" href="/css/syntax.css">
+<html lang="{{page.lang}}">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+		<title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title[page.lang] | escape }}{% endif %}</title>
+  		<meta name="description" content="{% if page.description %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description[page.lang] }}{% endif %}">
+		
+		
+		<link href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans" rel="stylesheet">
+		<link rel="stylesheet" media="screen" href="{{ site.baseurl }}/css/screen.css">
+		{% if page.print_stylesheet %}
+			<link rel="stylesheet" media="print" href="{{ site.baseurl }}/css/print.css">
+		{% endif %}
+		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
+		<!--{% feed_meta %}-->
+		 <link rel="alternate" type="application/rss+xml" title="{{ site.title[page.lang] }}" href="{{ site.feed[page.lang] | prepend: site.baseurl | prepend: site.url }}">
 
-      <!-- Custom CSS -->
-      <link rel="stylesheet" href="/css/main.css">
-
-      <!-- Responsive CSS -->
-      <link rel="stylesheet" href="/css/responsive.css">
-
-      <!-- Google Fonts -->
-      <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
-      <link href='https://fonts.googleapis.com/css?family=Raleway:300,400,700' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
-    <div class="site">
-      <div class="sidebar" id="sidebar">
-        <div class="header">
-          {% if site.lang == "it" and site.default_locale_in_subfolder != true %}
-            <h1 class="title"><a href="{{ site.baseurl_root }}/"><img id="logo" src="/images/logo.png"></a></h1>
-          {% else %}
-            <h1 class="title"><a href="{{ site.baseurl_root }}/{{ site.lang }}"><img id="logo" src="/images/logo.png"></a></h1>
-          {% endif %}
-          <span class="tagline">{% t global.tagline %}</span>
-        </div>
-        <div class="posts">
-          <ul class="posts-list">
-            {% for post in site.posts %}
-              <li class="post-link">
-                <a class="post-title" href="{{ site.baseurl }}{{ post.url }}">
-                  {{ post.title }} 
-                </a>
-              </li>
-            {% endfor %}
-            {% if site.pages.size > 1 %}
-              <hr>
-              {% for page in site.pages %}
-                {% if page.title != "Home" %}
-                  {% unless page.url contains "page2" or page.url contains "page3" %}
-                    <li class="post-link">
-                      <a class="post-title" href="{{ site.baseurl }}{{ page.url }}">
-                        {{ page.title }} - {{ site.lang }}
-                      </a>
-                    </li>
-                  {% endunless %}
-                {% endif %}
-              {% endfor %}
-            {% endif %}
-          </ul>
-        </div>
-        <div class="footer">
-          <span id="footer-links">
-            <a href="" class="footer-link">{% t global.about %}</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">{% t global.twitter %}</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">{% t global.github %}</a>
-          </span>
-        </div>
-        {% tf footer.md %}
-        <br />
-        <a class="link-it" href="{% tl root it %}">it</a>
-        <a class="link-en" href="{% tl root en %}">en</a>
-        <a class="link-es" href="{% tl root es %}">es</a>
-      </div>
-
-        {{ content }}
-
-    </div>
-    <script src="/scripts/responsive.js" type="text/javascript"></script>
-  </body>
+		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
+			<script>
+				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+				ga('create', '{{ site.google_analytics_key }}', 'auto');
+				ga('send', 'pageview');
+			</script>
+			<script async src='https://www.google-analytics.com/analytics.js'></script>
+		{% endif %}
+	</head>
+	<body>
+		<div class="wrapper" style="text-align: right; line-height: 2em">
+		  {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
+		  {% for post in posts %} <a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a> {% endfor %}
+		  
+		  {% assign page_lang=site.pages | where:"ref", page.ref | sort: 'lang' | map: 'lang' | uniq  %}
+		  {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang'  %}
+		   
+			{% for page in pages %} 
+				{% if page_lang contains page.lang %}
+					<a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a>
+				{% endif %}
+				{% assign page_lang = page_lang | remove: page.lang %}
+			{% endfor %}
+		</div>
+		{% include navigation.html %}
+		<header>
+			<a href="{{site.baseurl }}/">
+				<img src="{{ site.baseurl }}/images/logo.svg" width="180" alt="logo">
+			</a>
+		</header>
+		<div class="container main-content">
+			<section class="content">{{ content }}</section>
+			{% include sidebar.html %}
+		</div>
+		<footer>
+			<div class="container">
+				<hr>
+				&copy; {{ site.title[page.lang] }} {{ site.time | date: "%Y" }}. {{site.copyright[page.lang]}}
+			</div>
+		</footer>
+	</body>
 </html>
