--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="description" content="Description">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-</head>
-<body>
-<div id="app"></div>
-<script>
-	window.$docsify = {
-		name: '<span><b>TDOS</b></span>',
-		repo: '',
-		coverpage: true,
-		coverpage: ['/', '/zh-cn/'],
-		loadNavbar: true,
-		loadSidebar: true,
-		maxLevel: 3,
-		subMaxLevel: 2,
-		mergeNavbar: true,
-		onlyCover: false,
-		topMargin: 60,
-		auto2top: true,
-		autoHeader: true,
-		notFoundPage: true
-	}
-</script>
-<script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-<script src="//unpkg.com/prismjs/components/prism-bash.js"></script>
-<script src="//unpkg.com/prismjs/components/prism-java.js"></script>
-<script src="//unpkg.com/prismjs/components/prism-sql.js"></script>
 
-<!--  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>-->
+<html lang="{{ site.lang | default: site.default_lang }}">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>-->
+		{% seo %}
+		{% feed_meta %}
 
-</body>
+		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400,400italic,600,600italic,700,700italic|Inconsolata:400,700">
+		<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+		<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
+		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
+		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
+
+		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
+			<script>
+				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+				ga('create', '{{ site.google_analytics_key }}', 'auto');
+				ga('send', 'pageview');
+			</script>
+			<script async src='https://www.google-analytics.com/analytics.js'></script>
+		{% endif %}
+	</head>
+
+	<body>
+		<nav>
+			<a href="{{ site.baseurl }}/en/">English</a>
+			<a href="{{ site.baseurl }}/zh/">中文</a>
+		</nav>
+	</body>
 </html>
