--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
 				{{ site.title }}
 				<button type="button" class="open-nav" id="open-nav"></button>
 				<nav>
-					<a href="{{ site.baseurl }}/{{ 'en' | prepend: page.url | replace: '/en/', '' }}">English</a>
-					<a href="{{ site.baseurl }}/{{ 'zh' | prepend: page.url | replace: '/zh/', '' }}">中文</a>
+					<a href="{{ site.baseurl }}/en">English</a>
+					<a href="{{ site.baseurl }}/zh">中文</a>
 				</nav>
 			</h1>
 
