--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,30 +44,41 @@
 			<nav {% if site.show_full_navigation %}class="full-navigation"{% endif %}>
 				<ul>
 					<li class="nav-item top-level {% if page.url == '/' %}current{% endif %}">
-						{% assign home = site.html_pages | where: 'url', '/' | first %}
-						<a href="{{ site.baseurl }}/">{{ home.title }}</a>
+						{% assign home = site.html_pages | where: 'lang', page.lang | where: 'url', '/' | first %}
+						<a href="{{ site.baseurl }}/{{ page.lang }}/">{{ home.title }}</a>
 					</li>
 				</ul>
 
 				<ul>
-					{% assign grouped = site.docs | group_by: 'category' %}
+					{% assign grouped = site.docs | where: 'lang', page.lang | group_by: 'category' %}
 					{% for group in grouped %}
-						<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
-							{% assign items = group.items | sort: 'order' %}
-							<a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
-							<ul>
-								{% for item in items %}
-									<li class="nav-item {% if item.url == page.url %}current{% endif %}"><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
-								{% endfor %}
-							</ul>
-						</li>
+					<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
+						{% assign items = group.items | sort: 'order' %}
+						<a href="{{ site.baseurl }}/{{ page.lang }}{{ items.first.url }}">{{ group.name }}</a>
+						<ul>
+							{% for item in items %}
+							<li class="nav-item {% if item.url == page.url %}current{% endif %}">
+								<a href="{{ site.baseurl }}/{{ page.lang }}{{ item.url }}">{{ item.title }}</a>
+							</li>
+							{% endfor %}
+						</ul>
+					</li>
 					{% endfor %}
 				</ul>
 
 				<ul>
 					<li class="nav-item top-level {% if page.url == '/changelog/' %}current{% endif %}">
-						{% assign changelog = site.html_pages | where: 'url', '/changelog/' | first %}
-						<a href="{{ site.baseurl }}/changelog/">{{ changelog.title }}</a>
+						{% assign changelog = site.html_pages | where: 'lang', page.lang | where: 'url', '/changelog/' | first %}
+						<a href="{{ site.baseurl }}/{{ page.lang }}/changelog/">{{ changelog.title }}</a>
+					</li>
+				</ul>
+
+				<!-- 语言切换链接 -->
+				<ul>
+					<li class="nav-item top-level">
+						<a href="{{ site.baseurl }}/{{ page.lang == 'zh' ? 'en' : 'zh' }}/{{ page.url | remove: '/' | split: '/' | last }}">
+							{% if page.lang == 'zh' %}English{% else %}中文{% endif %}
+						</a>
 					</li>
 				</ul>
 			</nav>
