--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,9 +76,8 @@
 				<!-- 语言切换链接 -->
 				<ul>
 					<li class="nav-item top-level">
-						<a href="{{ site.baseurl }}/{{ page.lang == 'zh' ? 'en' : 'zh' }}{{ page.url }}">
-							{% if page.lang == 'zh' %}English{% else %}中文{% endif %}
-						</a>
+											<a href="{{ site.baseurl }}/en">English</a>
+											<a href="{{ site.baseurl }}/zh">中文</a>
 					</li>
 				</ul>
 			</nav>
