--- a/en/_layouts/default.html
+++ b/en/_layouts/default.html
@@ -77,7 +77,7 @@
 		<ul>
 			<li class="nav-item top-level">
 				<a href="{{ site.baseurl }}/{{ page.lang == 'zh' ? 'en' : 'zh' }}{{ page.url }}">
-					{% if page.lang == 'zh' %}English{% else %}中文{% endif %}
+					{% if page.lang == 'en' %}English{% else %}中文{% endif %}
 				</a>
 			</li>
 		</ul>
