--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,17 +49,32 @@
 					</li>
 				</ul>
 
+<!--				<ul>-->
+<!--					{% assign grouped = site.docs | where: 'lang', page.lang | group_by: 'category' %}-->
+<!--					{% for group in grouped %}-->
+<!--					<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">-->
+<!--						{% assign items = group.items | sort: 'order' %}-->
+<!--						<a href="{{ site.baseurl }}/{{ page.lang | default: site.default_lang }}{{ items.first.url }}">{{ group.name }}</a>-->
+<!--						<ul>-->
+<!--							{% for item in items %}-->
+<!--							<li class="nav-item {% if item.url == page.url %}current{% endif %}">-->
+<!--								<a href="{{ site.baseurl }}/{{ page.lang | default: site.default_lang }}{{ item.url }}">{{ item.title }}</a>-->
+<!--							</li>-->
+<!--							{% endfor %}-->
+<!--						</ul>-->
+<!--					</li>-->
+<!--					{% endfor %}-->
+<!--				</ul>-->
+
 				<ul>
-					{% assign grouped = site.docs | where: 'lang', page.lang | group_by: 'category' %}
+					{% assign grouped = site.docs | group_by: 'category' %}
 					{% for group in grouped %}
 					<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
 						{% assign items = group.items | sort: 'order' %}
-						<a href="{{ site.baseurl }}/{{ page.lang | default: site.default_lang }}{{ items.first.url }}">{{ group.name }}</a>
+						<a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
 						<ul>
 							{% for item in items %}
-							<li class="nav-item {% if item.url == page.url %}current{% endif %}">
-								<a href="{{ site.baseurl }}/{{ page.lang | default: site.default_lang }}{{ item.url }}">{{ item.title }}</a>
-							</li>
+							<li class="nav-item {% if item.url == page.url %}current{% endif %}"><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
 							{% endfor %}
 						</ul>
 					</li>
