--- a/en/_layouts/default.html
+++ b/en/_layouts/default.html
@@ -54,11 +54,11 @@
 			{% for group in grouped %}
 			<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
 				{% assign items = group.items | sort: 'order' %}
-				<a href="{{ site.baseurl }}/en/{{ items.first.url }}">{{ group.name }}</a>
+				<a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
 				<ul>
 					{% for item in items %}
 					<li class="nav-item {% if item.url == page.url %}current{% endif %}">
-						<a href="{{ site.baseurl }}/en/{{ item.url }}">{{ item.title }}</a>
+						<a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
 					</li>
 					{% endfor %}
 				</ul>
