--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,12 +60,12 @@
 			{% endfor %}
 		</ul>
 
-		<ul>
-			<li class="nav-item top-level {% if page.url == '/changelog/' %}current{% endif %}">
-				{% assign changelog = site.html_pages | where: 'url', '/changelog/' | first %}
-				<a href="{{ site.baseurl }}/changelog/">{{ changelog.title }}</a>
-			</li>
-		</ul>
+<!--		<ul>-->
+<!--			<li class="nav-item top-level {% if page.url == '/changelog/' %}current{% endif %}">-->
+<!--				{% assign changelog = site.html_pages | where: 'url', '/changelog/' | first %}-->
+<!--				<a href="{{ site.baseurl }}/changelog/">{{ changelog.title }}</a>-->
+<!--			</li>-->
+<!--		</ul>-->
 
 		<ul>
 			<li class="nav-item top-level">
@@ -77,15 +77,15 @@
 	</nav>
 </header>
 
-<!--<section class="main">-->
-<!--	<div class="page-header">-->
-<!--		<h2>{% if page.category %}{{ page.category }}{% else %}{{ site.title }}{% endif %}</h2>-->
-<!--		<h3>{{ page.title }}</h3>-->
-<!--	</div>-->
-<!--	<article class="content">-->
-<!--		{{ content }}-->
-<!--	</article>-->
-<!--</section>-->
+<section class="main">
+	<div class="page-header">
+		<h2>{% if page.category %}{{ page.category }}{% else %}{{ site.title }}{% endif %}</h2>
+		<h3>{{ page.title }}</h3>
+	</div>
+	<article class="content">
+		{{ content }}
+	</article>
+</section>
 
 <script>
 	document.getElementById("open-nav").addEventListener("click", function () {
