--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
 
 		<ul>
 			<li class="nav-item top-level">
-				<a href="{{ site.baseurl }}/zh/{{ page.url }}">
+				<a href="{{ site.baseurl }}/zh{{ page.url }}">
 					{% if page.lang == 'zh' %}English{% else %}中文{% endif %}
 				</a>
 			</li>
