--- a/en/_layouts/default.html
+++ b/en/_layouts/default.html
@@ -76,8 +76,10 @@
 		<!-- 语言切换链接 -->
 		<ul>
 			<li class="nav-item top-level">
-				<a href="{{ site.baseurl }}/{{ page.lang == 'zh' ? 'en' : 'zh' }}{{ page.url }}">
-					{% if page.lang == 'en' %}English{% else %}中文{% endif %}
+				{% assign new_lang = page.lang == 'zh' ? 'en' : 'zh' %}
+				{% assign new_url = page.url | remove: '/zh' | remove: '/en' %}
+				<a href="{{ site.baseurl }}/{{ new_lang }}{{ new_url }}">
+					{% if page.lang == 'zh' %}English{% else %}中文{% endif %}
 				</a>
 			</li>
 		</ul>
