--- a/zh/_layouts/default.html
+++ b/zh/_layouts/default.html
@@ -78,7 +78,7 @@
 			<li class="nav-item top-level">
 				{% assign new_lang = page.lang == 'zh' ? 'en' : 'zh' %}
 				{% assign new_url = page.url | remove: '/zh' | remove: '/en' %}
-				<a href="{{ site.baseurl }}/{{ new_lang }}{{ new_url }}">
+				<a href="{{ site.baseurl }}/{{ new_lang }}">
 					{% if page.lang == 'zh' %}English{% else %}中文{% endif %}
 				</a>
 			</li>
