--- a/zh/_layouts/default.html
+++ b/zh/_layouts/default.html
@@ -77,7 +77,7 @@
 		<ul>
 			<li class="nav-item top-level">
 				<a href="{{ site.baseurl }}/en">
-					{% if page.lang == 'zh' %}English{% else %}中文{% endif %}
+					English
 				</a>
 			</li>
 		</ul>
