--- a/zh/_layouts/default.html
+++ b/zh/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="{{ site.lang | default: site.default_lang }}">
+<html lang="zh">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
