--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
 		<ul>
 			<li class="nav-item top-level">
 				{% assign new_lang = page.lang == 'zh' ? 'zh' : 'en'%}
-				<a href="{{ site.baseurl }}/{{ new_lang }}">
+				<a href="{{ site.baseurl }}/zh">
 					{% if page.lang == 'zh' %}English{% else %}中文{% endif %}
 				</a>
 			</li>
