--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,8 +70,8 @@
 		<ul>
 			<li class="nav-item top-level">
 				{% assign new_lang = page.lang == 'zh' ? 'en' : 'zh' %}
-				<a href="{{ site.baseurl }}/{{ page.lang }}">
-					{% if page.lang == 'zh' %}English{% else %}中文{% endif %}
+				<a href="{{ site.baseurl }}/{{ new_lang }}">
+					{% if page.lang == 'en' %}中文{% else %}English{% endif %}
 				</a>
 			</li>
 		</ul>
