--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,26 +45,41 @@
 		</ul>
 
 		<ul>
-			{% if page.lang == 'en' %}
-			{% assign docs = site.en_docs %}
-			{% elsif page.lang == 'zh' %}
-			{% assign docs = site.zh_docs %}
-			{% endif %}
-			{% assign grouped = docs | group_by_exp: "doc", "doc.path | split: '/' | slice: -2, 1" %}
+			{% assign grouped = site.zh_docs | group_by: 'category' %}
 			{% for group in grouped %}
-			<li class="nav-item top-level {% if group.name == page.url | split: '/' | slice: -2, 1 %}current{% endif %}">
-				<a href="#">{{ group.name | capitalize }}</a>
+			<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
+				{% assign items = group.items | sort: 'order' %}
+				<a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
 				<ul>
-					{% assign items = group.items | sort: 'order' %}
 					{% for item in items %}
-					<li class="nav-item {% if item.url == page.url %}current{% endif %}">
-						<a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
-					</li>
+					<li class="nav-item {% if item.url == page.url %}current{% endif %}"><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
 					{% endfor %}
 				</ul>
 			</li>
 			{% endfor %}
 		</ul>
+
+<!--		<ul>-->
+<!--			{% if page.lang == 'en' %}-->
+<!--			{% assign docs = site.en_docs %}-->
+<!--			{% elsif page.lang == 'zh' %}-->
+<!--			{% assign docs = site.zh_docs %}-->
+<!--			{% endif %}-->
+<!--			{% assign grouped = docs | group_by_exp: "doc", "doc.path | split: '/' | slice: -2, 1" %}-->
+<!--			{% for group in grouped %}-->
+<!--			<li class="nav-item top-level {% if group.name == page.url | split: '/' | slice: -2, 1 %}current{% endif %}">-->
+<!--				<a href="#">{{ group.name | capitalize }}</a>-->
+<!--				<ul>-->
+<!--					{% assign items = group.items | sort: 'order' %}-->
+<!--					{% for item in items %}-->
+<!--					<li class="nav-item {% if item.url == page.url %}current{% endif %}">-->
+<!--						<a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>-->
+<!--					</li>-->
+<!--					{% endfor %}-->
+<!--				</ul>-->
+<!--			</li>-->
+<!--			{% endfor %}-->
+<!--		</ul>-->
 
 		<!-- 语言切换链接 -->
 		<ul>
