--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 
 	<!-- 打印 page.lang 和 docs 的值 -->
 	<p>Current page language: {{ page.lang }}</p>
-	<p>Collections: {{ site.collections }}</p>
+	<p>All documents: {{ site.documents | map: 'title' | join: ', ' }}</p>
 	<p>EN docs collection: {{ site.en_docs | inspect }}</p>
 	<p>ZH docs collection: {{ site.zh_docs }}</p>
 
