--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
 	<!-- 打印 page.lang 和 docs 的值 -->
 	<p>Current page language: {{ page.lang }}</p>
 	<p>All documents: {{ site.collections }}</p>
-	<p>EN docs collection: {{ site.collection.en_docs | inspect }}</p>
-	<p>ZH docs collection: {{ site.collection.zh_docs }}</p>
+	<p>EN docs collection: {{ site.collections.en_docs | inspect }}</p>
+	<p>ZH docs collection: {{ site.collections.zh_docs }}</p>
 
 	<form action="{{ site.baseurl }}/{{ page.lang | default: site.default_lang }}/search/" method="get">
 		<input type="text" name="q" id="search-input" placeholder="{% if page.lang == 'zh' %}搜索{% else %}Search{% endif %}" autofocus>
