--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,11 @@
 				<ul>
 					<li class="nav-item top-level {% if page.url == '/' %}current{% endif %}">
 						{% assign home = site.html_pages | where: 'url', '/' | first %}
-						<a href="{{ site.baseurl }}/">English / 中文</a>
+						<a href="{{ site.baseurl }}/">English</a>
+					</li>
+					<li class="nav-item top-level {% if page.url == '/china/' %}current{% endif %}">
+						{% assign home = site.html_pages | where: 'url', '/' | first %}
+						<a href="{{ site.baseurl }}/china">中文</a>
 					</li>
 				</ul>
 			</nav>
