--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,10 +81,10 @@
 		</header>
 
 		<section class="main">
-			<div class="page-header">
+<!--			<div class="page-header">-->
 <!--				<h2>{% if page.category %}{{ page.category }}{% else %}{{ site.title }}{% endif %}</h2>-->
-				<h3>{{ page.title }}</h3>
-			</div>
+<!--				<h3>{{ page.title }}</h3>-->
+<!--			</div>-->
 			<article class="content">
 				{{ content }}
 			</article>
