--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,11 +81,11 @@
 				{% for group in chinagrouped %}
 				<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
 					{% assign items = group.items | sort: 'order' %}
-					<a href="{{ site.baseurl }}/china/facebook/">{{ group.name }}</a>
+					<a href="{{ site.baseurl }}/china/">{{ group.name }}</a>
 					<ul>
 						{% for item in items %}
 						<li class="nav-item {% if item.url == page.url %}current{% endif %}"><a
-								href="{{ site.baseurl }}/china/facebook/">{{ item.title }}</a></li>
+								href="{{ site.baseurl }}/china/">{{ item.title }}</a></li>
 						{% endfor %}
 					</ul>
 				</li>
