--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,21 +41,21 @@
 		</form>
 
 		<nav {% if site.show_full_navigation %}class="full-navigation" {% endif %}>
-			<ul>
-				{% unless page.url contains '/china/' %}
-				<li class="nav-item top-level {% if page.url == '/' %}current{% endif %}">
-					{% assign home = site.html_pages | where: 'url', '/' | first %}
-					<a href="{{ site.baseurl }}/">{{ home.title }}</a>
-				</li>
-				{% endunless %}
-				{% if page.url contains '/china/' %}
-				<li class="nav-item top-level {% if page.url == '/' %}current{% endif %}">
-					{% assign chinahome = site.html_pages | where: 'url', '/china/' | first %}
-					<a href="{{ site.baseurl }}/china/">{{ chinahome.title }}</a>
-				</li>
-				{% endif %}
+<!--			<ul>-->
+<!--				{% unless page.url contains '/china/' %}-->
+<!--				<li class="nav-item top-level {% if page.url == '/' %}current{% endif %}">-->
+<!--					{% assign home = site.html_pages | where: 'url', '/' | first %}-->
+<!--					<a href="{{ site.baseurl }}/">{{ home.title }}</a>-->
+<!--				</li>-->
+<!--				{% endunless %}-->
+<!--				{% if page.url contains '/china/' %}-->
+<!--				<li class="nav-item top-level {% if page.url == '/' %}current{% endif %}">-->
+<!--					{% assign chinahome = site.html_pages | where: 'url', '/china/' | first %}-->
+<!--					<a href="{{ site.baseurl }}/china/">{{ chinahome.title }}</a>-->
+<!--				</li>-->
+<!--				{% endif %}-->
 
-			</ul>
+<!--			</ul>-->
 
 			<ul>
 				{% unless page.url contains '/china/' %}
